# magpies

./: Cargo.toml  README.md  metrics.jsonl
src/: command_poll.rs  command_target.rs  command_view.rs  jsonl.rs  lib.rs  main.rs  metrics.rs  num.rs  poller.rs  record.rs  viewer.rs
