[package]
name = "magpies"
version = "0.1.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Command-line tool for polling and visualizing JSON-formatted time series metrics"
homepage = "https://github.com/sile/magpies"
repository = "https://github.com/sile/magpies"
readme = "README.md"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
crossterm = "0.28.1"
orfail = "1.1.0"
ratatui = "0.28.1"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
